--- a/register.css
+++ b/register.css
@@ -59,3 +59,15 @@ body {
 	background-color: #2868c7;
   	transition: background-color 0.2s;
 }
+
+.register form input[type="button"] {
+  	width: 100%;
+  	padding: 15px;
+ 	margin-top: 20px;
+  	background-color: #3274d6;
+  	border: 0;
+  	cursor: pointer;
+  	font-weight: bold;
+  	color: #ffffff;
+  	transition: background-color 0.2s;
+}
